--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ main {
     padding: 16px;
     width: 100%;
     display: grid;
-    grid-template-columns: auto 1fr 0.5fr;
+    grid-template-columns: auto 1fr ;
     grid-gap: 10px;
 }
 
